# rs-sdk-base-code-changer

./: CHANGELOG.md  Cargo.toml  README.md  publish.sh  tool-update.sh  vm-test-build-copy.sh  zip-example-wasm.sh
contracts/core/price-aggregator/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/price-aggregator/scenarios/: stress_submit_test.scen.json  stress_submit_with_gas_schedule_test.scen.json
contracts/core/price-aggregator/src/: lib.rs
contracts/core/price-aggregator/tests/: price_aggregator_blackbox_test.rs  price_aggregator_stress_blackbox.rs  price_aggregator_whitebox_test.rs
contracts/core/price-aggregator/wasm/: Cargo.toml
contracts/core/price-aggregator/wasm/src/: lib.rs
contracts/core/wmoa-swap/: Cargo.toml
contracts/core/wmoa-swap/interaction/: snippets.sh
contracts/core/wmoa-swap/meta/: Cargo.toml
contracts/core/wmoa-swap/meta/src/: main.rs
contracts/core/wmoa-swap/scenarios/: unwrap_moa.scen.json  wrap_moa.scen.json
contracts/core/wmoa-swap/src/: wmoa.rs
contracts/core/wmoa-swap/tests/: wmoa_swap_scenario_rs_test.rs
contracts/core/wmoa-swap/wasm/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crowdfunding-dct/interaction/: devnet.snippets.sh  testnet.snippets.sh
contracts/examples/crowdfunding-dct/meta/: Cargo.toml
contracts/examples/crowdfunding-dct/scenarios/: _generated_fund.scen.json  _generated_init.scen.json  _generated_query_status.scen.json  _generated_sc_err.scen.json  crowdfunding-claim-failed.scen.json  crowdfunding-claim-successful.scen.json
contracts/examples/crowdfunding-dct/src/: crowdfunding_dct.rs
contracts/examples/crowdfunding-dct/tests/: crowdfunding_dct_blackbox_test.rs  crowdfunding_dct_scenario_rs_test.rs
contracts/examples/crowdfunding-dct/wasm/: Cargo.toml
contracts/examples/dct-transfer-with-fee/: Cargo.toml
contracts/examples/dct-transfer-with-fee/meta/: Cargo.toml
contracts/examples/dct-transfer-with-fee/src/: dct_transfer_with_fee.rs  fee.rs
contracts/examples/dct-transfer-with-fee/tests/: dct_transfer_with_fee_scenario_rs_test.rs
contracts/examples/dct-transfer-with-fee/wasm/: Cargo.toml
contracts/examples/fractional-nfts/meta/: Cargo.toml
contracts/examples/lottery-dct/meta/: Cargo.toml
contracts/examples/ping-pong-moa/meta/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/basic-features/interact/: Cargo.toml
contracts/feature-tests/basic-features/meta/: Cargo.toml
contracts/feature-tests/basic-features/scenarios/: storage_mapper_non_fungible_token.scen.json
contracts/feature-tests/basic-features/src/: crypto_features.rs  elliptic_curve_features.rs  storage_direct_store.rs  storage_mapper_fungible_token.rs  storage_mapper_non_fungible_token.rs  token_identifier_features.rs
contracts/feature-tests/basic-features/tests/: basic_features_scenario_rs_test.rs  basic_features_token_identifier_test.rs
contracts/feature-tests/dct-system-sc-mock/: Cargo.toml
contracts/feature-tests/dct-system-sc-mock/meta/: Cargo.toml
contracts/feature-tests/dct-system-sc-mock/src/: dct_system_sc_mock.rs
contracts/feature-tests/dct-system-sc-mock/tests/: dct_system_sc_mock_scenario_go_test.rs  dct_system_sc_mock_scenario_rs_test.rs
contracts/feature-tests/dct-system-sc-mock/wasm/: Cargo.toml
contracts/feature-tests/managed-map-features/: Cargo.toml
contracts/feature-tests/managed-map-features/meta/: Cargo.toml
contracts/modules/: Cargo.toml
contracts/modules/src/: dct.rs  default_issue_callbacks.rs  dns.rs  lib.rs  staking.rs  subscription.rs  transfer_role_proxy.rs
contracts/modules/src/governance/: governance_configurable.rs  governance_events.rs  governance_proposal.rs  mod.rs
contracts/modules/src/token_merge/: merged_token_instances.rs  merged_token_setup.rs  mod.rs  readme.md
data/codec-derive/: Cargo.toml  README.md
framework/base/: Cargo.toml
framework/base/src/: abi.rs  err_msg.rs  lib.rs  macros.rs
framework/base/src/abi/: contract_abi.rs  dct_attribute_abi.rs
framework/base/src/api/: blockchain_api.rs  builtin_function_names.rs  call_value_api.rs  send_api.rs
framework/base/src/dct/: system_sc_proxy.rs
framework/base/src/io/: call_value_init.rs
framework/derive/: Cargo.toml
framework/derive/src/generate/: abi_gen.rs  payable_gen.rs  proxy_gen.rs
framework/derive/src/model/: argument.rs  contract_trait.rs
framework/derive/src/parse/: trait_argument_parse.rs
framework/derive/src/preprocessing/: substitution_list.rs
framework/snippets/: Cargo.toml  README.md
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_tx_spec.rs  interactor_vm_query.rs  lib.rs
framework/wasm-adapter/: Cargo.toml
framework/wasm-adapter/src/api/: blockchain_api_node.rs  call_value_api_node.rs  send_api_node.rs  vm_api_node.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/tests/: interpreter_test.rs
vm/: Cargo.toml
vm/src/: lib.rs  mem_conv.rs  types.rs  vm_err_msg.rs  world_mock.rs
vm/src/tx_execution/: blockchain_vm.rs  builtin_function_mocks.rs  exec_call.rs  exec_contract_endpoint.rs  exec_general_tx.rs  system_sc.rs
vm/src/tx_execution/builtin_function_mocks/: builtin_func_container.rs  builtin_func_trait.rs
vm/src/tx_execution/system_sc/: system_sc_issue.rs  system_sc_special_roles.rs  system_sc_unimplemented.rs
vm/src/tx_mock/: tx_async_call_data.rs  tx_back_transfers.rs  tx_cache_balance_util.rs  tx_context.rs  tx_input.rs
vm/src/tx_mock/tx_managed_types/: tx_managed_buffer.rs
vm/src/types/: vm_dct_local_role.rs  vm_dct_local_role_flags.rs
vm/src/vm_hooks/: vh_dispatcher.rs  vh_source.rs
vm/src/vm_hooks/vh_handler/: vh_blockchain.rs  vh_call_value.rs  vh_send.rs
vm/src/vm_hooks/vh_impl/: vh_debug_api.rs  vh_single_tx_api.rs  vh_static_api.rs
vm/src/world_mock/: account_data.rs  blockchain_mock.rs  blockchain_state.rs  dct_data.rs  dct_instance.rs  dct_instance_metadata.rs  dct_instances.rs  failing_executor.rs  reserved.rs
(+535 files in other folders)
