[package]
name = "dharitri-wmoa-swap-sc"
version = "0.45.2"

authors = [
    "Dorin Iancu <dorin.iancu@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Wrapped MOA Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/wmoa.rs"

[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.45.2"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.45.2"
path = "../../../framework/scenario"
