[package]
name = "crowdfunding-dct"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crowdfunding_dct.rs"

[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.45.2"
path = "../../../framework/scenario"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
