[package]
name = "dct-transfer-with-fee"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/dct_transfer_with_fee.rs"

[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.45.2"
path = "../../../framework/scenario"
