[package]
name = "basic-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/basic_features_main.rs"

[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.45.2"
path = "../../../framework/scenario"

[dependencies.dharitri-sc-modules]
version = "0.45.2"
path = "../../../contracts/modules"

[dev-dependencies.dct-system-sc-mock]
path = "../dct-system-sc-mock"
