[package]
name = "managed-map-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/mmap_features.rs"
[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../framework/base"

features = ["managed-map"]

[dev-dependencies.dharitri-sc-scenario]
version = "0.45.2"
path = "../../../framework/scenario"

[dev-dependencies.dct-system-sc-mock]
path = "../dct-system-sc-mock"
