[package]
name = "dharitri-wmoa-swap-sc-meta"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-wmoa-swap-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.45.2"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta]
version = "0.45.2"
path = "../../../../framework/meta"
default-features = false
