[package]
name = "lottery-dct-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.lottery-dct]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.45.2"
path = "../../../../framework/meta"
default-features = false
