[package]
name = "ping-pong-moa-meta"
version = "0.0.0"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2021"
publish = false

[dependencies.ping-pong-moa]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.45.2"
path = "../../../../framework/meta"
default-features = false
