[package]
name = "dct-system-sc-mock-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.dct-system-sc-mock]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.45.2"
path = "../../../../framework/meta"
default-features = false
