[package]
name = "erc1155-marketplace-meta"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.erc1155-marketplace]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.45.2"
path = "../../../../../framework/meta"
default-features = false
